objects/csbb__Product_Configuration_Request__c.object
<CustomObject>
    <description>Object that holds product configuration requests.</description>
    <fields>
        <fullName>csbb__Commercial_Approval_Status__c</fullName>
        <description>Flag that determines if approval process has been initiated for product configuration request.</description>
        <inlineHelpText>Flag that determines if approval process has been initiated for product configuration request.</inlineHelpText>
        <label>Commercial Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csbb__Commercial_Authorization_Level__c</fullName>
        <description>Authorization level for commercial approvals.</description>
        <inlineHelpText>Authorization level for commercial approvals.</inlineHelpText>
        <label>Commercial Authorization Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csbb__Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>cscfga__Configuration_Offer__c</referenceTo>
        <relationshipLabel>Product Configuration Requests</relationshipLabel>
        <relationshipName>Product_Configuration_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csbb__Opportunity_ID__c</fullName>
        <formula>csbb__Product_Basket__r.cscfga__Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csbb__Optionals__c</fullName>
        <description>Miscellaneous additional fields, as needed (JSON structure recommended).</description>
        <inlineHelpText>Miscellaneous additional fields, as needed (JSON structure recommended).</inlineHelpText>
        <label>Optionals</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>csbb__Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csbb__Postcode__c</fullName>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csbb__Product_Basket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Basket</label>
        <referenceTo>cscfga__Product_Basket__c</referenceTo>
        <relationshipLabel>Product Configuration Requests</relationshipLabel>
        <relationshipName>Product_Configuration_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csbb__Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>cscfga__Product_Category__c</referenceTo>
        <relationshipLabel>Product Configuration Requests</relationshipLabel>
        <relationshipName>Product_Configuration_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csbb__Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Product Configuration Requests</relationshipLabel>
        <relationshipName>Product_Configuration_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csbb__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csbb__Technical_Approval_Status__c</fullName>
        <description>Field represents status of the approval process on product configuration request based on the product configuration.</description>
        <inlineHelpText>Field represents status of the approval process on product configuration request based on the product configuration.</inlineHelpText>
        <label>Technical Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csbb__Technical_Authorization_Level__c</fullName>
        <description>Authorization level for technical approvals.</description>
        <inlineHelpText>Authorization level for technical approvals.</inlineHelpText>
        <label>Technical Authorization Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csbb__Total_MRC__c</fullName>
        <label>Monthly Recurring Charges Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csbb__Total_OC__c</fullName>
        <label>One-Off Charges Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csbb__Total_QRC__c</fullName>
        <label>Quarterly Recurring Charges Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csbb__Total_SOV__c</fullName>
        <label>Total Sales Order Value (SOV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csbb__Total_YRC__c</fullName>
        <label>Yearly Recurring Charges Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Product Configuration Request</label>
    <listViews>
        <fullName>csbb__All</fullName>
        <columns>NAME</columns>
        <columns>csbb__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCR-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Configuration Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>